# snake-arena-online

./: README.Docker.md  docker-compose.yml  index.html  openapi.yaml  package-lock.json  package.json
.github/workflows/: ci-cd.yml
backend/: Dockerfile  README.md  pyproject.toml  snake_arena.db
backend/app/: config.py  database.py  main.py
backend/tests/: test_auth.py  test_games.py  test_leaderboard.py
frontend/: package-lock.json
frontend/src/pages/: Index.tsx
frontend/src/services/: mockApi.ts
src/components/: GameBoard.tsx
src/contexts/: AuthContext.tsx
src/lib/: gameLogic.ts
src/pages/: Leaderboard.tsx  Spectate.tsx
src/services/: mockApi.test.ts
